# rootfm

./: README.md
rootfm-core/: Cargo.toml
rootfm-core/examples/: midi.rs  rootfm-midi.rs  speed.rs
rootfm-core/src/: algorithm.rs  envelope.rs  lib.rs  operator.rs  oscillator.rs  preset.rs  synthesizer.rs  voice.rs
rootfm-core/src/reverb/: all_pass.rs  comb.rs  delay_line.rs  early_reflection_tap_delay_line.rs  low_pass.rs  mod.rs  moorer.rs
rootfm-firmware/: Cargo.toml  README.md
rootfm-firmware/.cargo/: config
rootfm-firmware/src/: main.rs  output.rs
